# games_test_ollama

./: .gitignore  README.md  answer.txt  document_learning.ipynb  pyproject.toml
