[tool.poetry]
name = "games"
version = "0.1.0"
description = ""
authors = ["Abby Malson <github@augustmalson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.12"
langchain = "^0.1.16"
pyzmq = "26.0.0"
ipykernel = "^6.29.4"
chromadb = "^0.4.24"
langchain-text-splitters = "^0.0.1"
unstructured = {extras = ["all-docs"], version = "^0.13.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
